fix whitespace at top when scrolling

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -53,6 +53,8 @@ $card-content-padding: 1.75rem
 $footer-padding: 0rem 1.5rem 2rem
 $hero-body-padding-medium: 5rem 1.5rem
 $box-background-color: $dark
+$body-background-color: $dark
+
 
 
 
